# webcall-ai-buddy

./: README.md  index.html  tailwind.config.ts
backend/: .env  main.py  pyproject.toml  requirements.txt
src/: index.css
src/components/: CallButton.tsx  VoiceCallPanel.tsx  Waveform.tsx
src/pages/: Index.tsx
src/services/: VoiceService.ts
